<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.enssol.lapendic.adnan.enssolchatapp.SettingsActivity"
    android:background="@color/colorPrimary">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/settings_app_barr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:src="@drawable/adnan"
        android:id="@+id/settings_image"/>

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_status_line"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:text="@string/status"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_change_image_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_change_status_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/change_image_btn"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/settings_change_status_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_change_image_btn"
        android:layout_marginBottom="61dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/change_status_btn"
        android:textColor="@android:color/white" />
</RelativeLayout>
