<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.enssol.lapendic.adnan.enssolchatapp.StartActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:gravity="center"
        android:text="@string/welcome_to_enssol_chat_app"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/start_reg_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/newAccountButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_signin_btn"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/start_signin_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_reg_button"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/sign_in_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>